--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,6 @@ set(UNITY_HEADER_FILES
     unity_internal.h)
 set_target_properties(unity-framework PROPERTIES PUBLIC_HEADER "${UNITY_HEADER_FILES}")
 
-add_executable(bubble_sort_test)
-target_sources(bubble_sort_test PRIVATE modules/bubble_sort_test.c)
-target_link_libraries(bubble_sort_test PRIVATE algorithms unity-framework)
-
+add_executable(sorting_test)
+target_sources(sorting_test PRIVATE modules/sorting_test.c)
+target_link_libraries(sorting_test PRIVATE algorithms unity-framework)
